--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
             $('#lista-marchi').children('ul').append('<li>'+value.marchio+'</li>');
         });
     });
+    $('#lista-marchi').trigger('create');
     $('#lista-marchi').listview('refresh');
 </script>
 
