Test static item in the list

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
     <div data-role="content">
         <div id="lista-marchi" class="content-primary">
             <ul data-role="listview" data-inset="true" data-filter="true" data-filter-theme="d" data-theme="d" data-divider-theme="d">
-
+                <li>Static Item</li>
             </ul>
         </div>
     </div>
