--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
                 $('#lista-marchi').children('ul').append('<li>'+value.marchio+'</li>');
             });
         });
+        $('#lista-marchi').listview('refresh');
     });
 </script>
 
